# seesaw

./: .eslintrc.js  .gitignore  Dockerfile  LICENSE  README.md  coco_notes.txt  conda_requirements.yml  init_data_actors.py  init_model_actor.py  jsconfig.json  package-lock.json  package.json  preprocess_dataset.py  pyproject.toml  requirements.txt  requirements2.txt  run.bash  run_app.bash  run_notebook.bash  seesaw-site.conf  seesaw.conf  seesaw.conf.temp  seesaw.spc.conf  session_server.py  session_server3.py  setup.py  supercloud.conf  vue.config.js
figures/: active_search_30q_initial_plot.R  active_search_res_v0.parquet  baseline_histogram.R  baseline_scores.parquet  baseline_variance.R  basic_scatter_data.parquet  boxplots.R  breakdown.R  breakdown.parquet  breakdown_df.parquet  eval_data.parquet  expected_reward.R  functions.R  query_latency.R  query_scatter.R  query_scatter.parquet  query_scatter_multiscale.parquet  query_scatter_v2.R  query_scatter_v3.R  query_scatter_variants.parquet  seesaw_delta.parquet  seesaw_delta_cdf.R  staircase.R  stats_subset.parquet
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
notebooks/: benchmark_figures-find5.ipynb  benchmark_figures.ipynb  data_mturk.parquet  data_mturk.py  find10_interval.parquet  main_benchmark-old_results.ipynb  main_benchmark.ipynb  paper_figure_tables.ipynb  seesaw_figures_ng.ipynb  time figure.ipynb  time figure.py  time_figure_v2.ipynb  time_view_v3.parquet  user study  v2 data-mturk.ipynb  user study  v2 data-mturk.py  user study  v2 data.ipynb  user study  v2 data.py
(+299 files in other folders)
